crates/biome_cli/tests/snapshots/main_commands_lint/linter_can_resolve_imported_symbols.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint src/index.ts
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "nursery": {
        "noFloatingPromises": "on"
      }
    }
  }
}
```

## `src/foo.ts`

```ts
export function foo(): Foo {}

export async function bar() {}
```

## `src/index.ts`

```ts
import { foo, bar } from "./foo.ts";

fn(foo());

bar();
```

# Emitted Messages

```block
src/index.ts:5:1 lint/nursery/noFloatingPromises ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i A "floating" Promise was found, meaning it is not properly handled and could lead to ignored errors or unexpected behavior.
  
    3 │ fn(foo());
    4 │ 
  > 5 │ bar();
      │ ^^^^^^
  
  i This happens when a Promise is not awaited, lacks a `.catch` or `.then` rejection handler, or is not explicitly ignored using the `void` operator.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
