crates/biome_cli/tests/snapshots/main_commands_lint/linter_doesnt_crash_on_malformed_code_from_issue_4623.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint issue4623.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "suspicious": {
        "noCommentText": "on"
      }
    }
  }
}
```

## `issue4623.js`

```js
<b
 //
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │     "linter": {
       │               ^
   > 3 │         "rules": {
   > 4 │             "recommended": false,
   > 5 │             "suspicious": {
   > 6 │                 "noCommentText": "on"
   > 7 │             }
   > 8 │         }
   > 9 │     }
       │     ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
issue4623.js:3:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token. Did you mean `{'}'}` or `&rbrace;`?
  
    1 │ <b
    2 │  //
  > 3 │ }
      │ ^
  

```

```block
issue4623.js:3:2 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `<` but instead the file ends
  
    1 │ <b
    2 │  //
  > 3 │ }
      │  
  
  i the file ends here
  
    1 │ <b
    2 │  //
  > 3 │ }
      │  
  

```

```block
issue4623.js:2:2 lint/suspicious/noCommentText  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Wrap comments inside children within braces.
  
    1 │ <b
  > 2 │  //
      │  ^^
    3 │ }
  
  i Unsafe fix: Wrap the comments with braces
  
    2 │ ·{/*··*/}
      │  + ++++ +

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 errors.
```
