crates/biome_cli/tests/snapshots/main_commands_lint/linter_finds_nested_package_json_for_no_undeclared_dependencies_inversed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint frontend/file1.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredDependencies": "on"
      }
    }
  }
}
```

## `frontend/file1.js`

```js
import 'react-dom'
```

## `frontend/package.json`

```json
{
    "dependencies": {
        "react-dom": "19.0.0"
    }
}
```

## `package.json`

```json
{
    "dependencies": {
        "react": "19.0.0"
    }
}
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
