crates/biome_cli/tests/snapshots/main_commands_lint/linter_minimum_severity_can_be_set_per_override.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 577
expression: redactor(content)
---
## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["strict/**"],
      "linter": {
        "minimumSeverity": "error"
      }
    }
  ]
}
```

## `lax/file.js`

```js
array.flatMap((x) => x);
```

## `strict/file.js`

```js
array.flatMap((x) => x);
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
lax/file.js:1:1 lint/complexity/noFlatMapIdentity  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Avoid unnecessary callback in flatMap call.
  
  > 1 │ array.flatMap((x) => x);
      │ ^^^^^^^^^^^^^^^^^^^^^^^
  
  i You can just use flat to flatten the array.
  
  i Unsafe fix: Replace unnecessary flatMap call to flat instead.
  
  - array.flatMap((x)·=>·x);
  + array.flat();
  

```

```block
strict/file.js:1:1 lint/complexity/noFlatMapIdentity  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid unnecessary callback in flatMap call.
  
  > 1 │ array.flatMap((x) => x);
      │ ^^^^^^^^^^^^^^^^^^^^^^^
  
  i You can just use flat to flatten the array.
  
  i Unsafe fix: Replace unnecessary flatMap call to flat instead.
  
  - array.flatMap((x)·=>·x);
  + array.flat();
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
Found 1 info.
```
